; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_read_file_json.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_read_file_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hb_presets_read_file_json(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @hb_value_read_json(i8* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32* @hb_plist_parse_file(i8* %11)
  store i32* %12, i32** %5, align 8
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32*, i32** %5, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i8* null, i8** %2, align 8
  br label %21

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = call i8* @hb_value_get_json(i32* %18)
  store i8* %19, i8** %4, align 8
  %20 = load i8*, i8** %4, align 8
  store i8* %20, i8** %2, align 8
  br label %21

21:                                               ; preds = %17, %16
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i32* @hb_value_read_json(i8*) #1

declare dso_local i32* @hb_plist_parse_file(i8*) #1

declare dso_local i8* @hb_value_get_json(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
